# wave

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  LICENSE  Pipfile  README.md  pyproject.toml  setup-dev.py  setup.py  setup_dev.py  startup.py
.github/ISSUE_TEMPLATE/: bug-report.md  new-feature.md  new-pull-request.md
.github/workflows/: pylint.yml  release.yml
.github/worksflows/: github-action-test.yml
docs/: BODYPARTS.md  COMPONENTS.md  DATAMODELS.md  GESTURES.md  TERMS.md
docs/Core/: CORE_API.md  _CORE.md
docs/DevOps/: APP_STARTUP.md  CODE_STYLING.md  DEPENDENCIES.md  DEPENDENCY_MANAGEMENT.md  DEPENDENCY_SETUP.md  DEPLOYMENT.md  DISTRIBUTION.md  GITHUB_ACTIONS.md  GITHUB_ACTION_PYLINT.md  GITHUB_ACTION_RELEASE.md  GITHUB_SETTINGS.md  GITHUB_TEMPLATES.md  REQUIREMENTS.md  SOURCES.md  _DEV_OPS.md
docs/Device/: _DEVICE.md
docs/ImageProcessor/: IMAGE_PROCESSOR.md  IMAGE_PROCESSOR_API.md  _IMAGE_PROCESSOR  _IMAGE_PROCESSOR.md
docs/User/: _USER_GUIDE.md
docs/WebApp/: _WEB_APP.md
scripts/: apt_installs.sh  startup.py
src/core/: COMPONENTS.md  config.yml.example  core.py  gesture.py  pyproject.toml
src/core/src/: ConfigHolder.py  config_holder.py  core.py  gesture.py
src/core/src/components/: DeviceManager.py  ImageProcessor.py  base_component.py  device_manager.py  image_processor.py
src/device/: pyproject.toml
src/enums/: bodyparts.py  gesture_types.py
src/image/: __init__.py  __init__M.py  pyproject.toml  setup_dev.py
src/ui/: pyproject.toml  setup.py  setup_dev.py
wave/constants/: api_config.py
wave/core/: config.yml.example
wave/core/src/: core.py  gesture.py
wave/core/src/controller/: core_controller.py
wave/image/: __init__.py  pyproject.toml  setup.sh
wave/image/src/controller/: image_controller.py  image_processor_controller.py
wave/image/src/image_processing/: image_processor.py
wave/image/src/stores/: core_store.py  gesture_store.py
wave/models/dataclasses/: device.py  event.py  gesture.py
wave/models/enums/: bodyparts.py  gesture_types.py
