[tool.poetry]
name = "wave"
version = "0.0.1"
description = ""
license = "GPLv3"
readme = "README.md"
authors = [
    "Raziel Kretschmer <s4005251@edu.dhsn.de>",
    "Alexander Jahn <s4005236@edu.dhsn.de>",
    "Maximilian Unger <s4005395@edu.dhsn.de>",
    "Jaden Dustin Kowarsch <s4005362@edu.dhsn.de>"
]

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"
pre-commit = "^4.2.0"
black = "^25.1.0"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

core = { path = "./src/core" }
device = { path = "./src/device" }
image = { path = "./src/image" }
ui = { path = "./src/ui" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py312']          # targets Python Version 3.12
include = '\.pyi?$'                 #includes .py- and .pyi- files
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''                                 # standard excludes

[tool.flake8]
ignore = ["E203", "E266", "E501", "W503", "F403", "F401"]
max-line-length = 79
max-complexity = 18
select = ["B","C","E","F","W","T4","B9"]
