[tool.poetry]
name = "wave"
version = "0.0.1"
description = ""
license = "GPLv3"
readme = "README.md"
authors = [
    "Raziel Kretschmer <s4005251@edu.dhsn.de>",
    "Alexander Jahn <s4005236@edu.dhsn.de>",
    "Maximilian Unger <s4005395@edu.dhsn.de>",
    "Jaden Dustin Kowarsch <s4005362@edu.dhsn.de>"
]

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"
pre-commit = "^4.2.0"
black = "^25.1.0"
isort = "^6.0.1"
tomlkit = "^0.13.2"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 79                    # pep8 compliant
target-version = ['py311']          # targets Python Version 3.11
include = '\.pyi?$'                 # includes .py- and .pyi- files
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''                                 # standard excludes

[tool.isort]
profile = "black"                   # applies standard black config 
line_length = 79                    # pep8 compliant
py_version = 311                    # targets Python Version 3.11
