[project]
name = "core"
version = "0.0.1"
description = ""
# authors = []
requires-python = ">=3.12"

[tool.poetry.dependencies]
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
tomlkit = "^0.13.2"
black = "^25.1.0"
isort = "^6.0.1"
pylint = "^3.3.7"

[tool.black]
line_length = 79                    # pep8 compliant
target-version = ['py312']          # targets Python Version 3.12
include = '\.pyi?$'                 # includes .py- and .pyi- files
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''                                 # standard excludes

[tool.isort]
profile = "black"                   # applies standard black config 
line_length = 79                    # pep8 compliant
py_version = 312                    # targets Python Version 3.12
